--- a/index.html
+++ b/index.html
@@ -114,21 +114,7 @@
         <div class="window-body cart-field">
             <ul class="cart-items-list" id="cart-items-list">
 
-
-                <li class="cart-item">
-                    <div class="cart-line">
-                        <!-- <div class="cart-line-element item-number">1</div> -->
-                        <div class="cart-line-element item-number" style="font-weight: bold;">N.</div>
-                        <div class="cart-line-element item-name">item_name item_name item_name item_name item_name
-                            item_name item_name item_name item_name item_name item_name item_name item_name item_name
-                            item_name v</div>
-                        <div class="cart-line-element item-price-total" style="font-weight: bold;">100$</div>
-                        <div class="title-bar-controls item-delete">
-                            <button aria-label="Close"></button>
-                        </div>
-                    </div>
-                </li>
-
+                <!-- Something was here! -->
 
             </ul>
         </div>
